# sixty-thousand-homes-simulation

./: .gitignore  .pre-commit-config.yaml  README.md  home_hvacs_simulation.html  home_hvacs_simulation.ipynb  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
src/: phys_sim.py
