[project]
name = "ten-thousand-homes"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datashader>=0.17.0",
    "holoviews>=1.20.1",
    "jupyterlab>=4.3.5",
    "matplotlib>=3.10.0",
    "nbconvert>=7.16.6",
    "numpy>=2.1.3",
    "pandas>=2.2.3",
    "pyqt5>=5.15.11",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.2",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.4",
    "sympy>=1.13.3",
]

[dependency-groups]
dev = [
    "pre-commit>=4.1.0",
]
